# ecowoods-app

./: .env.example  .gitignore  AccountInformationScreen.js  AddPaymentMethodScreen.js  App.js  AppNavigator.js  BidTableLadenScreen.js  Bidersladen.js  BuzzScreen.js  CONTRIBUTING.md  CalendarScreen.js  HomeScreen.js  JobRequestScreen.js  LICENSE  LoginScreen.js  NotificationPreferencesScreen.js  PaymentOptionsScreen.js  PlacedOrdersScreen.js  PrivacyOptionsScreen.js  ProfilePicture.js  README.md  RegisterScreen.js  RenovationsScreen.js  RequestEstimateScreen.js  SECURITY.md  Settings.js  ShippingAddressScreen.js  Untitled file 1.js  Untitled file 2.js  app.json  docker-compose.yml  package.json  styles.js
.github/workflows/: ci.yml
admin-dashboard/: index.html
admin-dashboard/css/: styles.css
admin-dashboard/js/: api.js  app.js
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  bids.py  calendar_events.py  job_requests.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: bid.py  calendar_event.py  job_request.py  user.py
backend/app/schemas/: bid.py  calendar_event.py  job_request.py  user.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_bids.py  test_calendar.py  test_health.py  test_job_requests.py  test_security.py  test_users.py
frontend/: App.js  app.json  package.json  styles.js
frontend/context/: useStore.js
frontend/screens/: AccountScreen.js  BidDetailScreen.js  BidsScreen.js  CalendarScreen.js  HomeScreen.js  JobRequestScreen.js  (+4 more)
scripts/: start.sh  stop.sh
(+1 files in other folders)
